# result-transformer-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
result-transformer/: Cargo.toml
result-transformer-core/: Cargo.toml
result-transformer-core/src/: lib.rs
result-transformer-core/src/async_/: async_err_transformer.rs  async_ok_transformer.rs  async_result_transformer.rs  mod.rs
result-transformer-core/src/async_/macros/: alias_transformer.rs  mod.rs
result-transformer-core/src/async_/macros/err/: define_async_err_transformer.rs  impl_async_err_transformer.rs  impl_async_err_transformer_via_input_into.rs  impl_async_err_transformer_via_output_from.rs  impl_async_err_transformer_via_self_err_transformer.rs  mod.rs
result-transformer-core/src/async_/macros/impl_transformer/: impl_async_err_transformer_via_output_from.rs  impl_async_err_transformer_via_self_err_transformer.rs  impl_async_ok_transformer.rs  impl_async_ok_transformer_via_input_into.rs  impl_async_ok_transformer_via_self_ok_transformer.rs  impl_async_result_transformer.rs  impl_async_result_transformer_via_err_transform_fn.rs  impl_async_result_transformer_via_self_parts.rs  impl_async_result_transformer_via_self_result_transformer.rs  mod.rs
result-transformer-core/src/async_/macros/ok/: define_async_ok_transformer.rs  impl_async_ok_transformer.rs  impl_async_ok_transformer_via_input_into.rs  impl_async_ok_transformer_via_output_from.rs  impl_async_ok_transformer_via_self_ok_transformer.rs  mod.rs
result-transformer-core/src/async_/macros/result/: define_async_result_transformer.rs  define_async_result_transformer_from_err.rs  define_async_result_transformer_from_ok.rs  impl_async_result_transformer.rs  impl_async_result_transformer_from_parts.rs  impl_async_result_transformer_via_err_transform_fn.rs  impl_async_result_transformer_via_ok_transform_fn.rs  impl_async_result_transformer_via_self_parts.rs  impl_async_result_transformer_via_self_result_transformer.rs  mod.rs
result-transformer-core/src/async_/transformer/: async_err_transformer.rs  async_ok_transformer.rs  async_result_transformer.rs
result-transformer-core/src/sync/: err_transformer.rs  mod.rs  ok_transformer.rs  result_transformer.rs
result-transformer-core/src/sync/macros/: alias_transformer.rs  mod.rs
result-transformer-core/src/sync/macros/err/: define_err_transformer.rs  define_err_transformer_from.rs  define_err_transformer_into.rs  impl_err_transformer.rs  impl_err_transformer_via_input_into.rs  impl_err_transformer_via_output_from.rs  mod.rs
result-transformer-core/src/sync/macros/impl_transformer/: impl_err_transformer.rs  impl_err_transformer_via_input_into.rs  impl_ok_transformer.rs  impl_ok_transformer_via_input_into.rs  impl_result_transformer_via_err_transform_fn.rs  impl_result_transformer_via_ok_transform_fn.rs  mod.rs
result-transformer-core/src/sync/macros/modifiers/: mod.rs
result-transformer-core/src/sync/transformer/: result_transformer.rs
result-transformer-dependencies/: Cargo.toml
result-transformer-dependencies/src/: lib.rs  prelude.rs
result-transformer-derive/: Cargo.toml
result-transformer-derive/src/: lib.rs
result-transformer-flow/: Cargo.toml
result-transformer-flow/src/: lib.rs
result-transformer-flow/src/__internal/: mod.rs
result-transformer-flow/src/__internal/shared_macros/: mod.rs
result-transformer-flow/src/__internal/shared_step/: mod.rs
result-transformer-flow/src/async_/: mod.rs
result-transformer-flow/src/async_/flow/: async_err_flow.rs  async_ok_flow.rs  async_result_flow.rs  mod.rs
result-transformer-flow/src/async_/macros/: define_async_err_transformer_from_err_flow.rs  define_async_ok_transformer_from_ok_flow.rs  define_async_result_transformer_from_result_flow.rs  impl_async_err_transformer_via_err_flow.rs  mod.rs
result-transformer-flow/src/async_/step/: mod.rs
result-transformer-flow/src/sync/: mod.rs
result-transformer-flow/src/sync/flow/: err_flow.rs  mod.rs  ok_flow.rs  result_flow.rs
result-transformer-flow/src/sync/macros/: define_err_transformer_from_err_flow.rs  define_ok_transformer_from_ok_flow.rs  define_result_transformer_from_result_flow.rs  mod.rs
result-transformer-flow/src/sync/step/: mod.rs
result-transformer-macros/: Cargo.toml
result-transformer-macros/src/: lib.rs
result-transformer-macros/src/core/: mod.rs
result-transformer-macros/src/core/alias_transformer/: alias_async_err_transformer.rs  alias_async_ok_transformer.rs  alias_async_result_transformer.rs  alias_err_transformer.rs  alias_ok_transformer.rs  alias_result_transformer.rs  alias_transformer_shared.rs  mod.rs
result-transformer-macros/src/flow/: mod.rs
result-transformer-macros/src/flow/async_/: define_async_err_transformer_from_err_flow.rs  define_async_ok_transformer_from_ok_flow.rs  define_async_result_transformer_from_result_flow.rs  define_err_transformer_from_err_flow.rs  define_ok_transformer_from_ok_flow.rs  define_result_transformer_from_result_flow.rs  mod.rs
result-transformer-macros/src/flow/sync/: define_err_transformer_from_err_flow.rs  define_ok_transformer_from_ok_flow.rs  define_result_transformer_from_result_flow.rs  mod.rs
result-transformer-test/: Cargo.toml
result-transformer-test/src/: lib.rs
result-transformer-test/src/core/: async_.rs  mod.rs  sync.rs
result-transformer-test/src/core/macros/: mod.rs
result-transformer-test/src/core_macros/async_/: define_async_transformer_test.rs  mod.rs
result-transformer-test/src/core_macros/sync/: define_transformer_test.rs  mod.rs
result-transformer-test/src/flow/: mod.rs
result-transformer-test/src/flow/async_/: mod.rs
result-transformer-test/src/flow/macros/: mod.rs
result-transformer-test/src/flow/sync/: mod.rs
result-transformer-test/src/flow_macros/: mod.rs
result-transformer-test/src/flow_macros/async_/: define_transformer_from_flow_test.rs  mod.rs
result-transformer-test/src/flow_macros/sync/: define_transformer_from_flow_test.rs  mod.rs
result-transformer-test/src/helper/: logtest_helper.rs  mod.rs
result-transformer/src/: __internal.rs  lib.rs
(+391 files in other folders)
