[workspace]
resolver = "3"
members = [
    "result-transformer",
    "result-transformer-dependencies",
    "result-transformer-core",
    "result-transformer-flow",
    "result-transformer-macros",
    "result-transformer-test",
]

[workspace.package]
version = "0.0.2"
edition = "2024"

authors = ["Mikou"]
license = "MIT OR Apache-2.0"

description = "Traits, macros and utilities for transforming Result values."
readme = "README.md"
documentation = "https://docs.rs/result-transformer"
repository = "https://github.com/result-transformer/result-transformer-rs"
homepage = "https://github.com/result-transformer/result-transformer-rs"

keywords = ["result", "transform", "pipeline", "async", "error"]
categories = ["error-handling", "asynchronous"]

[workspace.dependencies]
result-transformer-core = { version = "0.0.2", path = "result-transformer-core" }
result-transformer-flow = { version = "0.0.2", path = "result-transformer-flow" }
result-transformer-macros = { version = "0.0.2", path = "result-transformer-macros" }
result-transformer-dependencies = { version = "0.0.2", path = "result-transformer-dependencies" }
