[package]
name = "result-transformer-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { workspace = true, optional = true}

[features]
sync = []
async = []

sync-macros = []
async-macros = []
