[package]
name = "result-transformer-dependencies"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1", optional = true, default-features = false }

log = { version = "0.4", optional = true }

[features]
tokio-rt = ["tokio/rt"]
tokio-macros = ["tokio/macros"]
log = ["dep:log"]
