[package]
name = "result-transformer-dependencies"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
log = { version = "0.4", optional = true }

[features]
log = ["dep:log"]
