[package]
name = "result-transformer-flow"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { path = "../result-transformer-dependencies" ,optional = true, default-features = false}

[features]

sync = ["_internal_shared_step"]
async = ["_internal_shared_step"]

sync-macros = []
async-macros = []

logging = ["result-transformer-dependencies/log"]

#internal
_internal_shared_step = []
