[package]
name = "result-transformer-flow"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { workspace = true, optional = true}

[features]

sync = ["_internal_shared_step", "_internal_shared_macros"]
async = ["_internal_shared_step", "_internal_shared_macros"]

sync-macros = []
async-macros = []

logging = ["result-transformer-dependencies/log"]

#internal
_internal_shared_step = []
_internal_shared_macros =[]
