[package]
name = "result-transformer-macros"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { path = "../result-transformer-dependencies" , default-features = false }

result-transformer-core = { path = "../result-transformer-core", optional = true }

result-transformer-flow = { path = "../result-transformer-flow", optional = true }

[features]

#core
core-sync = ["result-transformer-core/sync"]
core-async = ["result-transformer-core/async"]

core-sync-log = ["result-transformer-dependencies/log", "core-sync"] 
core-async-log = ["result-transformer-dependencies/log", "core-async"] 

#flow
flow-sync = ["result-transformer-flow/sync"]
flow-async = ["result-transformer-flow/async"]
