[package]
name = "result-transformer-test"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
async-deps = ["result-transformer-dependencies/tokio-macros", "result-transformer-dependencies/tokio-rt"]

all = ["core-all", "flow-all"]

# Core
core-all = ["core-sync-all", "core-async-all"]

core-sync-all = ["core-sync", "core-sync-macros"]
core-async-all = ["core-async", "core-async-macros"]

core-sync = ["result-transformer/core-sync"]
core-async = ["result-transformer/core-async", "async-deps"]

core-sync-macros = ["result-transformer/core-sync-macros"]
core-async-macros = ["result-transformer/core-async-macros" , "async-deps"]

# Flow
flow-all = ["flow-sync-all", "flow-async-all"]

flow-sync-all = ["flow-sync", "flow-sync-log-step", "flow-sync-macros"]
flow-async-all = ["flow-async", "flow-async-log-step", "flow-async-macros"]

flow-sync = ["result-transformer/flow-sync"]
flow-async = ["result-transformer/flow-async" , "async-deps"]

flow-sync-macros = ["result-transformer/flow-sync-macros"]
flow-async-macros = ["result-transformer/flow-async-macros" , "async-deps"]

flow-sync-log-step = ["result-transformer/flow-sync-log-step", "flow-sync", "logtest"]
flow-async-log-step = ["result-transformer/flow-async-log-step", "flow-async", "async-deps", "logtest"]

[dependencies]
result-transformer-dependencies = { path = "../result-transformer-dependencies", optional = true}

result-transformer = { path = "../result-transformer", optional = true , default-features = false }

logtest  = { version = "2", optional = true }