[package]
name = "result-transformer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { path = "../result-transformer-dependencies"}

result-transformer-core = { path = "../result-transformer-core", optional = true }
result-transformer-flow = { path = "../result-transformer-flow", optional = true  }
result-transformer-macros = { path = "../result-transformer-macros", optional = true }

[features]

default = ["core-sync"]

all = ["core-all", "flow-all"]

# Core
core-all = ["core-sync-all", "core-async-all"]

core-sync-all = ["core-sync", "core-sync-macros-all"]
core-async-all = ["core-async", "core-async-macros-all"]

core-sync = ["result-transformer-core/sync"]
core-async = ["result-transformer-core/async"]

core-sync-macros-all = ["core-sync-macros", "core-sync-log-macros"]
core-async-macros-all = ["core-async-macros", "core-async-log-macros"]

core-sync-macros = ["result-transformer-core/sync-macros", "core-sync"]
core-async-macros = ["result-transformer-core/async-macros", "core-async"]

core-sync-log-macros = ["result-transformer-core/sync-log-macros", "core-sync-macros"]
core-async-log-macros = ["result-transformer-core/async-log-macros", "core-async-macros"]

# Flow
flow-all = ["flow-sync-all", "flow-async-all"]

flow-sync-all = ["flow-sync", "flow-sync-log-step"]
flow-async-all = ["flow-async", "flow-async-log-step"]

flow-sync = ["result-transformer-flow/sync", "core-sync"]
flow-async = ["result-transformer-flow/async", "core-async"]

flow-sync-log-step = ["result-transformer-flow/logging", "flow-sync"]
flow-async-log-step = ["result-transformer-flow/logging", "flow-async"]

flow-sync-macros = ["result-transformer-flow/sync-macros", "flow-sync"]
flow-async-macros = ["result-transformer-flow/async-macros", "flow-async"]
