[package]
name = "result-transformer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
result-transformer-dependencies = { workspace = true }

result-transformer-core = { workspace = true, optional = true }
result-transformer-flow = { workspace = true, optional = true  }
result-transformer-macros = { workspace = true, optional = true }

[features]

default = ["core-sync"]

all = ["core-all", "flow-all"]

sync-all = ["core-sync-all", "flow-sync-all"]
async-all = ["core-async-all", "flow-async-all"]

# Core
core-all = ["core-sync-all", "core-async-all"]

core-sync-all = ["core-sync", "core-sync-macros"]
core-async-all = ["core-async", "core-async-macros"]

core-sync = ["result-transformer-core/sync"]
core-async = ["result-transformer-core/async"]

core-sync-macros = ["result-transformer-core/sync-macros", "core-sync"]
core-async-macros = ["result-transformer-core/async-macros", "core-async"]

# Flow
flow-all = ["flow-sync-all", "flow-async-all"]

flow-sync-all = ["flow-sync", "flow-sync-log-step", "flow-sync-macros"]
flow-async-all = ["flow-async", "flow-async-log-step", "flow-async-macros"]

flow-sync = ["result-transformer-flow/sync"]
flow-async = ["result-transformer-flow/async"]

flow-sync-log-step = ["result-transformer-flow/logging", "flow-sync"]
flow-async-log-step = ["result-transformer-flow/logging", "flow-async"]

flow-sync-macros = ["result-transformer-flow/sync-macros", "flow-sync", "core-sync"]
flow-async-macros = ["result-transformer-flow/async-macros", "flow-async", "core-async"]
